[gd_scene load_steps=5 format=3 uid="uid://dh4khcpxe6ho6"]

[ext_resource type="Script" path="res://addons/resource_manager/ingredient_manager/ingredient_row.gd" id="1_qdh6a"]
[ext_resource type="StyleBox" uid="uid://j3jo4bj0qur3" path="res://addons/resource_manager/editor_panels.tres" id="2_le0w1"]
[ext_resource type="Texture2D" uid="uid://dgvnyf5b7lo3r" path="res://addons/resource_manager/icons/trash_icon.png" id="2_mmp0y"]
[ext_resource type="PackedScene" uid="uid://dhpamtp22am52" path="res://addons/resource_manager/effects_manager/collapsed_effect_view.tscn" id="2_ncrwd"]

[node name="IngredientRow" type="HBoxContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 31.0
grow_horizontal = 2
size_flags_horizontal = 3
script = ExtResource("1_qdh6a")

[node name="ImageContainer" type="AspectRatioContainer" parent="."]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
alignment_horizontal = 0

[node name="ImageLabel" type="TextureRect" parent="ImageContainer"]
layout_mode = 2
stretch_mode = 5

[node name="NameLabel" type="LineEdit" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "Name"

[node name="DescriptionLabel" type="LineEdit" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
text = "Description"

[node name="StackSizeContainer" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
theme_override_styles/panel = ExtResource("2_le0w1")

[node name="StackSizeLabel" type="SpinBox" parent="StackSizeContainer"]
layout_mode = 2
size_flags_horizontal = 3
update_on_text_changed = true

[node name="CollapsedEffectView" parent="." instance=ExtResource("2_ncrwd")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0

[node name="ChoppableCheck" type="CheckBox" parent="."]
layout_mode = 2

[node name="CrushableCheck" type="CheckBox" parent="."]
layout_mode = 2

[node name="MeltableCheck" type="CheckBox" parent="."]
layout_mode = 2

[node name="ConcentratableCheck" type="CheckBox" parent="."]
layout_mode = 2

[node name="TypeDropdown" type="OptionButton" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5
item_count = 5
popup/item_0/text = "Mineral"
popup/item_1/text = "Plant"
popup/item_1/id = 1
popup/item_2/text = "Magic Plant"
popup/item_2/id = 2
popup/item_3/text = "Animal"
popup/item_3/id = 3
popup/item_4/text = "Magic Animal"
popup/item_4/id = 4

[node name="DeleteButton" type="Button" parent="."]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
icon = ExtResource("2_mmp0y")

[node name="DeleteConfirmationDialog" type="ConfirmationDialog" parent="."]
title = "Delete Confirmation"
ok_button_text = "Delete"
dialog_text = "Are you sure you want to delete this ingredient?"
dialog_autowrap = true

[connection signal="text_changed" from="NameLabel" to="." method="_on_name_changed"]
[connection signal="text_changed" from="DescriptionLabel" to="." method="_on_description_changed"]
[connection signal="value_changed" from="StackSizeContainer/StackSizeLabel" to="." method="_on_stack_size_changed"]
[connection signal="edit" from="CollapsedEffectView" to="." method="_on_effect_edit_pressed"]
[connection signal="toggled" from="ChoppableCheck" to="." method="_on_choppable_check_toggled"]
[connection signal="toggled" from="CrushableCheck" to="." method="_on_crushable_check_toggled"]
[connection signal="toggled" from="MeltableCheck" to="." method="_on_meltable_check_toggled"]
[connection signal="toggled" from="ConcentratableCheck" to="." method="_on_concentratable_check_toggled"]
[connection signal="item_selected" from="TypeDropdown" to="." method="_on_type_dropdown_selected"]
[connection signal="pressed" from="DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="confirmed" from="DeleteConfirmationDialog" to="." method="_on_delete_confirmed"]
